--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,22 @@
 version: "3"
 services:
-  postgres:
-    container_name: postgres
-    image: postgres
+  web:
+    container_name: web
+    build:
+      context: "."
+      dockerfile: "docker/Dockerfile.web"
+    ports:
+      - 5000:5000
+    depends_on:
+      - database
+  database:
+    container_name: database
     environment:
       POSTGRES_PASSWORD: "password"
       POSTGRES_USER: "user"
       POSTGRES_DB: "products"
+    build:
+      context: "."
+      dockerfile: "docker/Dockerfile.database"
     ports:
     - 5432:5432
-  web-app:
-    container_name: web_app
-    image: blinel/web_app
-    ports:
-    - 5000:5000
