--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     environment:
       POSTGRES_PASSWORD: "password"
       POSTGRES_USER: "user"
-      POSTGRES_DB: "products"
+      POSTGRES_DB: "supermarket"
     image: postgres
     expose:
       - 5432
