--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,13 +2,9 @@ version: "3"
 services:
   database:
     container_name: database
-    environment:
-      POSTGRES_PASSWORD: "password"
-      POSTGRES_USER: "user"
-      POSTGRES_DB: "supermarket"
-    image: postgres
-    expose:
-      - 5432
+    build:
+      context: "."
+      dockerfile: "docker/Dockerfile.database"
     volumes:
       - database:/var/run/postgresql
   web:
@@ -21,5 +17,6 @@ services:
       - 5000:5000
     volumes:
       - database:/var/run/postgresql
+      - .:/usr/src/app
 volumes:
   database:
